--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,13 +1,8 @@
+@import "secciones/body.scss";
 @import "secciones/navbar.scss";
 @import "secciones/fuentes.scss";
 
 
 *{
     box-sizing: border-box;
-}
-
-
-body{
-    margin: 0px;
-    padding: 0px;
 }
