--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,4 +1,4 @@
-@import "secciones/body.scss";
+@import "secciones/body-main.scss";
 @import "secciones/navbar.scss";
 @import "secciones/fuentes.scss";
 
