--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,6 +1,8 @@
 @import "secciones/body-main.scss";
 @import "secciones/navbar.scss";
 @import "secciones/fuentes.scss";
+@import "secciones/novedades.scss";
+@import "secciones/nosotros.scss";
 
 
 *{
