--- a/scss/secciones/body-main.scss
+++ b/scss/secciones/body-main.scss
@@ -5,7 +5,7 @@ body{
     background-size: cover;
 }
 
-main{
+.home-main{
     margin: 120px;
     & .titular{
         font-family: 'Bebas Neue', cursive;
