--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -3,6 +3,8 @@
 @import "secciones/fuentes.scss";
 @import "secciones/novedades.scss";
 @import "secciones/nosotros.scss";
+@import "secciones/servicios.scss";
+@import "secciones/contacto.scss";
 
 
 *{
