--- a/scss/secciones/body-main.scss
+++ b/scss/secciones/body-main.scss
@@ -33,7 +33,7 @@ body{
 
 footer{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     margin: 1rem;
