corregida la ruta de la imagen de fondo en el SCSS

--- a/scss/secciones/body-main.scss
+++ b/scss/secciones/body-main.scss
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
-    background-image: url(../../public/img/piano-fondo.jpg);
+    background-image: url(../public/img/piano-fondo.jpg);
     background-size: cover;
 }
 
