corregidas tags semanticas, añadido contenido, añadidas variables sass

--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -5,6 +5,7 @@
 @import "secciones/nosotros.scss";
 @import "secciones/servicios.scss";
 @import "secciones/contacto.scss";
+@import "secciones/variables.scss";
 
 
 *{
