--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 .home-main {
   margin: 120px; }
   .home-main .titular {
-    font-family: 'Bebas Neue', cursive;
+    font-family: "Bebas Neue", cursive;
     font-size: xx-large;
     color: white;
     display: flex;
@@ -32,7 +32,7 @@ footer {
   margin: 1rem; }
   footer div p {
     color: white;
-    font-family: 'Roboto', sans-serif; }
+    font-family: "Roboto", sans-serif; }
   footer div ul {
     margin: 0px;
     padding: 0px;
@@ -45,13 +45,13 @@ footer {
         padding: 1rem;
         display: block;
         transition: .5s;
-        font-family: 'Roboto', sans-serif; }
+        font-family: "Roboto", sans-serif; }
         footer div ul li a:hover {
           color: orangered; }
 
 @media (max-width: 800px) {
   body {
-    background-image: url(../../public/img/piano-fondo-mobile.jpg); }
+    background-image: url(../public/img/piano-fondo-mobile.jpg); }
   main .titular {
     font-size: x-small; }
   .footer-pagina .redes-footer ul {
@@ -62,13 +62,13 @@ footer {
     display: flex; } }
 
 .link-tincho {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   transition: .3s; }
   .link-tincho:hover {
     background-color: orangered; }
 
 .nov-main .titular {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   font-size: xx-large;
   color: white;
   display: flex;
@@ -81,23 +81,23 @@ footer {
 .nov-main .articulos {
   color: white; }
   .nov-main .articulos .titulo-art {
-    font-family: 'Bebas Neue', cursive; }
+    font-family: "Bebas Neue", cursive; }
   .nov-main .articulos .cuerpo-art {
-    font-family: 'Roboto', sans-serif; }
+    font-family: "Roboto", sans-serif; }
 
 .seccion-about .titular-about h1 {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   color: white;
   transition: .5s; }
   .seccion-about .titular-about h1:hover {
     color: orangered; }
 
 .seccion-about .parrafo-about p {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white; }
 
 .main-servicios .encabezado {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -107,21 +107,21 @@ footer {
     color: orangered; }
 
 .main-servicios .texto-info p {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   display: block;
   text-align: center;
   color: white; }
 
 .main-servicios .titular-serv {
-  font-family: 'Bebas Neue', cursive;
-  color: orange; }
+  font-family: "Bebas Neue", cursive;
+  color: orangered; }
 
 .main-servicios .texto-serv {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Bebas Neue", cursive;
   color: white; }
 
 .main-servicios .llamado {
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -134,7 +134,7 @@ footer {
 
 .formulario-contacto .titular-contacto h1 {
   display: flex;
-  font-family: 'Bebas Neue', cursive;
+  font-family: "Bebas Neue", cursive;
   justify-content: center;
   align-items: center;
   color: white;
@@ -143,7 +143,7 @@ footer {
     color: orangered; }
 
 .formulario-contacto .fuente-form {
-  font-family: 'Roboto', sans-serif; }
+  font-family: "Roboto", sans-serif; }
 
 * {
   box-sizing: border-box; }
