--- a/scss/secciones/servicios.scss
+++ b/scss/secciones/servicios.scss
@@ -1,41 +1,43 @@
+@import "secciones/variables.scss";
+
 .main-servicios{
     & .encabezado{
-        font-family: 'Bebas Neue', cursive;
+        font-family: $font-main;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: white;
+        color: $color-main;
         transition: .5s;
         &:hover{
-            color: orangered;
+            color: $color-secondary;
         }
     }
     & .texto-info p{
-        font-family: 'Roboto', sans-serif;
+        font-family: $font-secondary;
         display: block;
         text-align: center;
-        color: white;
+        color: $color-main;
         
     }
     & .titular-serv{
-        font-family: 'Bebas Neue', cursive;
-        color: orange;
+        font-family: $font-main;
+        color: $color-secondary;
     }
     & .texto-serv{
-        font-family: 'Roboto', sans-serif;
-        color: white;
+        font-family: $font-main;
+        color: $color-main;
     }
     & .llamado{
-        font-family: 'Bebas Neue', cursive;
+        font-family: $font-main;
         display: flex;
         justify-content: center;
         align-items: center;
         & a{
             text-decoration: none;
-            color: orangered;
+            color: $color-secondary;
             transition: .5s;
             &:hover{
-                background-color: white;
+                background-color: $color-main;
             }
         }
     }
