--- a/scss/secciones/variables.scss
+++ b/scss/secciones/variables.scss
@@ -1,5 +1,6 @@
 $color-main: white;
 $color-secondary: orangered;
+$color-third:black;
 
 $font-main: 'Bebas Neue', cursive;
 $font-secondary: 'Roboto', sans-serif;
