--- a/scss/secciones/body-main.scss
+++ b/scss/secciones/body-main.scss
@@ -5,6 +5,19 @@ body{
     padding: 0px;
     background-image: url(../public/img/piano-fondo.jpg);
     background-size: cover;
+
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+
+    @keyframes fadeInAnimation {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+         }
+    }
 }
 
 .home-main{
@@ -17,6 +30,20 @@ body{
         justify-content: center;
         align-items: center;
         transition: 1s;
+        animation-duration: 1s;
+        animation-name: slidein;
+
+        @keyframes slidein {
+            from {
+              margin-left: 100%;
+              width: 300%
+            }
+          
+            to {
+              margin-left: 0%;
+              width: 100%;
+            }
+          }
 
         &:hover{
             color: $color-secondary;
@@ -27,6 +54,21 @@ body{
         justify-content: center;
         align-items: center;
         transition: 1s;
+        animation-duration: 1s;
+        animation-name: slidein;
+
+        @keyframes slidein {
+            from {
+              margin-right: 100%;
+                width: 300%
+            }
+          
+            to {
+                margin-right: 0%;
+                width: 100%;
+            }
+          }
+        
         &:hover{
             transform: scale(1.1);
         }
