--- a/scss/secciones/body-main.scss
+++ b/scss/secciones/body-main.scss
@@ -126,7 +126,7 @@ footer{
         & .copyright-footer p{
             justify-content: center;
             align-items: center;
-            display: flex;
+            display: block;
         }
     }
 }
