--- a/css/main.css
+++ b/css/main.css
@@ -81,8 +81,10 @@ footer {
 @media (max-width: 800px) {
   body {
     background-image: url(../public/img/piano-fondo-mobile.jpg); }
-  main .titular {
-    font-size: x-small; }
+  .home-main.titular {
+    font-size: xx-small; }
+  .home-main.logo-schumann {
+    width: 100px; }
   .footer-pagina .redes-footer ul {
     display: none; }
   .footer-pagina .copyright-footer p {
