--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,8 @@ body {
     transition: 1s;
     animation-duration: 1s;
     animation-name: slidein; }
+  .home-main .logo-chico {
+    display: none; }
 
 @keyframes slidein {
   from {
@@ -50,7 +52,7 @@ body {
   to {
     margin-right: 0%;
     width: 100%; } }
-    .home-main .logo-grande:hover {
+    .home-main .logo-chico:hover {
       transform: scale(1.1); }
 
 footer {
@@ -80,11 +82,16 @@ footer {
 
 @media (max-width: 800px) {
   body {
-    background-image: url(../public/img/piano-fondo-mobile.jpg); }
+    background-image: url(../public/img/piano-fondo-mobile.jpg);
+    background-size: cover; }
   .home-main.titular {
-    font-size: xx-small; }
-  .home-main.logo-schumann {
-    width: 100px; }
+    font-size: 50px;
+    display: flex; }
+  .home-main .logo-grande {
+    display: none; }
+  .home-main .logo-chico {
+    display: flex;
+    justify-content: center; }
   .footer-pagina .redes-footer ul {
     display: none; }
   .footer-pagina .copyright-footer p {
